[package]
name = "underlion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1", features = ["derive"]}
serde_json = "1"
serde_repr = "0.1"
reqwest = {version = "0.11", features = ["blocking"]}
regex = "1"
crossbeam-channel = "0.5"
parking_lot = "0.12"
clap = {version = "3", features = ["derive"]}
zip = {version = "0.6", default-features = false, features = ["deflate", "bzip2", "zstd"]}
