[package]
name = "underlion"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true # Strip symbols for filesize
lto = true # Compile times? No, filesize!

[dependencies]
serde = {version = "1", features = ["derive"]}
serde_json = "1"
serde_repr = "0.1"
minreq = {version = "2", features = ["https"]}
regex = "1"
crossbeam-channel = "0.5"
clap = {version = "3", features = ["derive"]}
zip = {version = "0.6", default-features = false, features = ["deflate", "bzip2", "zstd"]}
